<resources>
    <string name="app_name">Helping Hands</string>
    <string name="version">helping hands (v_1.1)</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_requests">Requests</string>
    <string name="title_profile">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetching_data_from_database">Fetching data from the database…</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="someone_within_your_area_needs_your_help">Someone within your area needs your help</string>
    <string name="help_is_coming">Help is coming</string>
    <string name="a_volunteer_in_your_area_has_accepted_your_request">A volunteer in your area has accepted your request</string>
    <string name="please_provide_appropriate_name">Please provide appropriate name</string>
    <string name="pease_provide_appropriate_name">Please provide appropriate name</string>
    <string name="field_is_required">Field is required</string>
    <string name="please_provide_appropriate_email_id">Please provide appropriate email-id</string>
    <string name="please_provide_appropriate_age">Please provide appropriate age</string>
    <string name="female">Female</string>
    <string name="PROFILE_UPDATED_SUCCESSFULLY">PROFILE UPDATED SUCCESSFULLY</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="sibling">Sibling</string>
    <string name="Husband_Wife">Husband/Wife</string>
    <string name="Relative">Relative</string>
    <string name="Neighbour">Neighbour</string>
    <string name="Friend">Friend</string>
    <string name="Other">Other</string>
    <string name="Name_is_required">Name is required</string>
    <string name="Contact_number_is_required">Contact number is required</string>
    <string name="EMERGENCY_CONTACTS_UPDATED_SUCCESSFULLY">EMERGENCY CONTACTS UPDATED SUCCESSFULLY</string>
    <string name="Emergency_Alert">Emergency Alert\n</string>
    <string name="triggered_an_emergency_call"> has just triggered an emergency call. You are receiving this as </string>
    <string name="listed_you_as_an_emergency_contact"> has listed you as an emergency contact.</string>
    <string name="Last_known_location_of">Last known location of </string>
    <string name="Emergency_contacts_have_been_notified_via_text_message">Emergency contacts have been notified via text message</string>
    <string name="Last_Known_Location_is_in_this_area">Last Known Location is in this area :\n</string>
    <string name="Permission_Granted">Permission Granted</string>
    <string name="Permission_Rejected">Permission Rejected</string>
    <string name="SMS_Permission_provided">SMS Permission provided. You can trigger emergency alert now.</string>
    <string name="SMS_permission_is_not_provided_yet">SMS permission is not provided yet.</string>
    <string name="Emergency_contacts_not_found">Emergency contacts not found</string>
    <string name="Emergency_contacts_have_not_been_provided_yet">Emergency contacts have not been provided yet! Do you want to add Emergency contacts?</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Sending_Emergency_Message">Sending Emergency Message</string>
    <string name="Waiting">Waiting…</string>
    <string name="Alerting_Emergency_Contacts_via_text_message">Alerting Emergency Contacts via text message in </string>
    <string name="sec"> sec…</string>
    <string name="SOS_Alert_is_stopped">SOS Alert is stopped</string>
    <string name="Emergency_signal_is_already_started">Emergency signal is already started.</string>
    <string name="Emergency_Request_Broadcasted">Emergency Request Broadcasted</string>
    <string name="Please_provide_10_digit_Mobile_number">Please provide 10 digit Mobile number</string>
    <string name="Field_can_not_be_empty">Field can not be empty</string>
    <string name="Login_Successfully">Login Successfully</string>
    <string name="Invalid_Login_Credentials">Invalid Login Credentials</string>
    <string name="Error_getting_documents">Error getting documents: </string>
    <string name="Finding_current_location">Finding current location…</string>
    <string name="You_are_here">You are here</string>
    <string name="Assigned_Volunteer">Assigned Volunteer</string>
    <string name="Volunteer">Volunteer</string>
    <string name="Error_connecting_to_database">Error connecting to database</string>
    <string name="GPS_service_is_disabled">GPS service is disabled. You need to enable GPS location to access the map.</string>
    <string name="Turn_on_GPS">Turn on GPS</string>
    <string name="Cancel">Cancel</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="Internet_Connection_is_required">Internet Connection is required to perform the following task.</string>
    <string name="Ok">Ok</string>
    <string name="Database_Error_in_fetching">Database Error in fetching</string>
    <string name="My_Profile">My Profile</string>
    <string name="Emergency_Contacts">Emergency Contacts</string>
    <string name="Change_Credentials">Change Credentials</string>
    <string name="Deactivate_Account">Deactivate Account</string>
    <string name="Log_out">Log out</string>
    <string name="Help_About"><![CDATA[Help & About]]></string>
    <string name="Edit_profile_details">Edit profile details</string>
    <string name="Manage_Emergency_Contacts">Manage Emergency Contacts</string>
    <string name="Change_Forgot_password">Change/Forgot password</string>
    <string name="Account_deleted_permanently">Account will be deleted permanently</string>
    <string name="Session_destroyed">Session will be destroyed</string>
    <string name="Creators_info_and_Help">Creators info and Help</string>
    <string name="Change_Account_Password">Change Account Password</string>
    <string name="cancel">cancel</string>
    <string name="Change_password">Change password</string>
    <string name="This_will_delete_your_account">This will delete your account along with all your data. This can\'t be undone</string>
    <string name="Deactivate_my_Account">Deactivate my Account</string>
    <string name="Logout">Logout</string>
    <string name="Are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="got_it">got it</string>
    <string name="Deleting_Account_Data">Deleting Account Data…</string>
    <string name="Account_deactivated_successfully">Account deactivated successfully</string>
    <string name="Error_while_performing_action">Error while performing action</string>
    <string name="Password_does_not_match">Password does not match</string>
    <string name="NewPassword_must_be_6_characters_long">New Password must be 6 characters long</string>
    <string name="Updating_New_password">Updating New password…</string>
    <string name="Password_is_changed_successfully">Password is changed successfully</string>
    <string name="Help_provided">Help provided</string>
    <string name="Error_connecting_Database">Error connecting Database : </string>
    <string name="Request_stopped_successfully">Request stopped successfully</string>
    <string name="Please_provide_appropriate_name">Please provide appropriate name</string>
    <string name="Password_must_be_6_characters_long">Password must be 6 characters long</string>
    <string name="Please_provide_appropriate_email_id">Please provide appropriate email-id</string>
    <string name="Please_provide_appropriate_age">Please provide appropriate age</string>
    <string name="Account_Already_Exist">Account Already Exist</string>
    <string name="An_account_is_already_associated_with_given_contact_number">An account is already associated with given contact number.</string>
    <string name="Login">Login</string>
    <string name="ACCOUNT_CREATED_SUCCESSFULLY">ACCOUNT CREATED SUCCESSFULLY</string>
    <string name="FAIL_TO_CREATE_ACCOUNT">FAIL TO CREATE ACCOUNT, TRY AGAIN AFTER SOME TIME</string>
    <string name="Error_updating_location_in_the_database">Error updating location in the database.</string>
    <string name="Success_sending_notification">Success sending notification: </string>
    <string name="Error_sending_notification">Error sending notification: </string>
    <string name="user_name">User Name :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address :</string>
    <string name="contact_no">Contact no :</string>
    <string name="age">Age :</string>
    <string name="address">Address :</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="register_as_volunteer">Register as Volunteer</string>
    <string name="update_profile">Update profile</string>
    <string name="emergency_contact_1">Emergency Contact 1 :</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="emergency_contact_2">Emergency Contact 2 :</string>
    <string name="emergency_contact_3">Emergency Contact 3 :</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="welcome_to_helping_hands">Welcome to Helping Hands</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_nsignup">Don\'t have An account?\nSignup</string>
    <string name="register_yourself_by_providing_required_details_below">Register yourself by providing required details below</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="create_account">Create Account</string>
    <string name="enter_password">Enter password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="government_services">Government Services</string>
    <string name="dial_911_for_emergency_police_fire_or_ambulance">Dial 911 for Emergency. Police, Fire or Ambulance</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="by_triggering_this_emergency_contacts_will_be_notified_and_last_known_location_will_be_sent_every_5_minutes">By triggering this, emergency contacts will be notified and last known location will be sent every 5 minutes</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="trigger_sos">TRIGGER SOS</string>
    <string name="stop_sos">STOP SOS</string>
    <string name="broadcast_request">Broadcast Request</string>
    <string name="by_triggering_this_nearby_volunteer_will_be_notified_someone_will_be_able_to_help_you">By triggering this, nearby volunteer will be notified. Someone will be able to help you</string>
    <string name="malay_patel">Malay Patel</string>
    <string name="kishan_patel">Kishan Patel</string>
    <string name="smit_panchal">Smit Panchal</string>
    <string name="rushi_parmar">Rushi Parmar</string>
    <string name="helping_hands_version_1_1_0_0">Helping Hands, Version 1.1.0.0</string>
    <string name="home_page">Home Page :</string>
    <string name="you_can_call_911_text_your_emergency_contacts_or_broadcast_an_emergency_signal_to_nearby_volunteers_using_the_home_page">You can call 911, text your emergency contacts or broadcast an emergency signal to nearby volunteers using the home page.</string>
    <string name="all_the_nearby_volunteers_are_displayed_in_this_section_if_you_register_as_voulunteer_you_can_see_the_nearby_emergency_requests_and_also_respond_to_them">All the nearby volunteers are displayed in this section. If you register as voulunteer, you can see the nearby emergency requests and also respond to them.</string>
    <string name="you_can_see_your_history_of_emergency_requests_here_also_you_can_cancel_or_mark_a_request_resolved_after_the_help_is_arrived">You can see your history of emergency requests here. Also you can cancel or mark a request resolved after the help is arrived.</string>
    <string name="this_section_provies_your_account_management_you_can_edit_your_profile_set_update_your_emergency_contacts_update_your_credentials_log_out_or_deactivate_your_account_from_this_section">This section provies your account management. You can edit your profile, set/update your emergency contacts, update your credentials, log out or deactivate your account from this section.</string>
    <string name="map_page">Map Page :</string>
    <string name="requests_page">Requests Page :</string>
    <string name="profile_page">Profile Page :</string>
    <string name="about">About</string>
    <string name="creators">Creators :</string>
    <string name="ayush_patel">Ayush Patel</string>
    <string name="help">Help :</string>
    <string name="version_name">Version :</string>
    <string name="loading">Loading…</string>
    <string name="accept">ACCEPT</string>
    <string name="volunteer_no">Volunteer No :</string>
    <string name="ok">ok</string>
    <string name="request_id">REQUEST ID :</string>
    <string name="not_set">not set</string>
    <string name="timestamp">TimeStamp :</string>
    <string name="status">Status :</string>
    <string name="location">Location :</string>
    <string name="mark_as_nresolved">Mark as\nresolved</string>
    <string name="type">Type :</string>
    <string name="date">Date :</string>
</resources>